--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-native": "^0.24.1",
     "react-native-simple-store": "^1.0.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^2.9.0",
